Değişiklik: Proje güncellendi, footer düzenlendi.

--- a/about.html
+++ b/about.html
@@ -109,16 +109,25 @@
     </section>
 
 	<section class="ftco-about d-md-flex">
-    	<div class="one-half img" style="background-image: url(images/about.jpg);"></div>
-    	<div class="one-half ftco-animate">
-        <div class="heading-section ftco-animate ">
-          <h2 class="mb-4"><span class="flaticon-pizza">Granello</span> İtalyan Restoranına Hoşgeldiniz</h2>
-        </div>
-        <div>
-  				<p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
-  			</div>
-    	</div>
-    </section>
+		<div class="one-half img" style="background-image: url(images/about.jpg);"></div>
+		<div class="one-half ftco-animate">
+			<div class="heading-section ftco-animate">
+				<h2 class="mb-4"><span class="flaticon-pizza">Granello</span> İtalyan Restoranına Hoşgeldiniz</h2>
+			</div>
+			<div>
+				<p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
+			</div>
+			<div class="mt-4">
+				<h3 class="mb-3">Vizyonumuz</h3>
+				<p>İtalyan mutfağının zengin geleneklerini ve modern dokunuşlarını bir araya getirerek, sadece bir restoran değil, misafirlerimizin unutulmaz anılar biriktirdiği bir deneyim merkezi olmak. Granello, yerel ve uluslararası alanda tanınan, kaliteli hizmeti ve eşsiz lezzetleriyle sektörde örnek gösterilen bir marka olmayı hedeflemektedir. Hedefimiz, İtalyan mutfağını seven herkesin ilk tercihi olmak ve bu kültürü en otantik haliyle dünyaya tanıtmaktır.</p>
+			</div>
+			<div class="mt-4">
+				<h3 class="mb-3">Misyonumuz</h3>
+				<p>Granello İtalyan Restoran olarak, misafirlerimize sadece lezzetli yemekler değil, aynı zamanda keyifli bir atmosfer ve kaliteli bir hizmet sunmayı taahhüt ediyoruz. Misyonumuz, her bir yemeği, en taze ve kaliteli malzemeleri kullanarak hazırlamak ve misafirlerimize İtalya'nın geleneksel mutfağını özgün tatlarla sunmaktır. Aynı zamanda, topluma ve çevreye duyarlı bir marka olarak sürdürülebilirlik ilkelerine bağlı kalmak, çalışanlarımız ve misafirlerimizle güçlü bir bağ kurarak, her ziyaretin unutulmaz bir deneyime dönüşmesini sağlamaktır.</p>
+			</div>
+		</div>
+	</section>
+	
 
     <section class="ftco-section">
       <div class="container">
@@ -230,112 +239,130 @@
 
 		
 <section class="ftco-appointment">
-	<div class="overlay"></div>
-	<div class="container-wrap">
-	  <div class="row no-gutters d-md-flex align-items-center">
-		<div class="col-md-6 d-flex align-self-stretch">
-		  <div id="map"></div>
-		</div>
-		<div class="col-md-6 appointment ftco-animate">
-		  <h3 class="mb-3">Şikayet ve Öneriler</h3>
-		  <form action="#" class="appointment-form">
-			<div class="d-md-flex">
-			  <div class="form-group">
-				<input type="text" class="form-control" placeholder="Ad">
-			  </div>
-			</div>
-			<div class="d-me-flex">
-			  <div class="form-group">
-				<input type="text" class="form-control" placeholder="Soyad">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Mesaj"></textarea>
-			</div>
-			<div class="form-group">
-			  <input type="submit" value="Gönder" class="btn btn-primary py-3 px-4">
-			</div>
-		  </form>
-		</div>    			
-	  </div>
-	</div>
-  </section>
+    <div class="overlay"></div>
+    <div class="container-wrap">
+        <div class="row no-gutters d-md-flex align-items-center">
+            <div class="col-md-6 d-flex align-self-stretch">
+                <div class="map-container">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.853687906083!2d-73.9544412845941!3d40.69847032728747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zNDDCsDQxJzU0LjQiTiA3M8KwNTcnMDUuMiJX!5e0!3m2!1str!2str!4v1671224494921!5m2!1str!2str" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
+            <div class="col-md-6 appointment ftco-animate">
+                <h3 class="mb-3">Şikayet ve Öneriler</h3>
+                <form action="#" class="appointment-form">
+                    <div class="d-md-flex">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Ad">
+                        </div>
+                    </div>
+                    <div class="d-me-flex">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Soyad">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Mesaj"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Gönder" class="btn btn-primary py-3 px-4">
+                    </div>
+                </form>
+            </div>            
+        </div>
+    </div>
+</section>
 
-	<footer class="ftco-footer ftco-section img">
-    	<div class="overlay"></div>
-      <div class="container">
+<style>
+    /* Harita kapsayıcısı */
+    .map-container {
+        position: relative;
+        width: 100%; /* Genişlik %100 */
+        padding-bottom: 30%; /* 16:9 oranı için */
+        height: 0; /* Yükseklik sıfır */
+        overflow: hidden; /* Taşmayı önle */
+    }
+
+    /* Iframe ayarları */
+    .map-container iframe {
+        position: absolute; /* Konumlandırma */
+        top: 0;
+        left: 0;
+        width: 100%; /* Genişlik %100 */
+        height: 100%; /* Yükseklik %100 */
+        border: 0; /* Kenar çerçevesi yok */
+    }
+</style>
+
+
+<footer class="ftco-footer ftco-section img">
+    <div class="overlay"></div>
+    <div class="container">
         <div class="row mb-5">
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Hakkımızda</h2>
-              <p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Güncel Duyurular</h2>
-              <div class="block-21 mb-4 d-flex">
-                <!--<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>-->
-                <div class="text">
-                  <h3 class="heading"><a href="#">Pizza Margherita + Pizza Marinara 400.0 TL</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> 10 Aralık, 2024</a></div>
-                    <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-                    <!--<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
-                  </div>
+            <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Hakkımızda</h2>
+                    <p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
+                    <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+                        <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                        <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                        <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                    </ul>
                 </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <!--<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>-->
-                <div class="text">
-                  <h3 class="heading"><a href="#">Pizza Marinara Con Burrata bir alana bir bedava</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> 15 Kasım, 2024</a></div>
-                  </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Güncel Duyurular</h2>
+                    <div class="block-21 mb-4 d-flex">
+                        <!--<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>-->
+                        <div class="text">
+                            <h3 class="heading"><a href="blog.html">Pizza Margherita + Pizza Marinara 400.0 TL</a></h3>
+                            <div class="meta">
+                                <div><a href="#"><span class="icon-calendar"></span> 10 Aralık, 2024</a></div>
+                                <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
+                                <!--<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block-21 mb-4 d-flex">
+                        <!--<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>-->
+                        <div class="text">
+                            <h3 class="heading"><a href="blog.html">Pizza Marinara Con Burrata bir alana bir bedava</a></h3>
+                            <div class="meta">
+                                <div><a href="#"><span class="icon-calendar"></span> 15 Kasım, 2024</a></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-          <!--<div class="col-lg-2 col-md-6 mb-5 mb-md-5">
-             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Cooked</a></li>
-                <li><a href="#" class="py-2 d-block">Deliver</a></li>
-                <li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-                <li><a href="#" class="py-2 d-block">Mixed</a></li>
-              </ul>
+            <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">İletişim</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><span class="icon icon-map-marker"></span><span class="text">Plaj Yolu Sokak No:18 Suadiye ,İstanbul</span></li>
+                            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+90 216 464 17 77 - 78- 79</span></a></li>
+                            <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@granello.com</span></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>-->
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">İletişim</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Plaj Yolu Sokak No:18 Suadiye ,İstanbul</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+90 216 464 17 77 - 78- 79</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@granello.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>-->
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
+            <div class="col-md-12 text-center">
+                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>-->
+                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+            </div>
         </div>
-      </div>
-    </footer>
-    
+    </div>
+</footer>
+
+
   
 
   <!-- loader -->
