--- a/services.html
+++ b/services.html
@@ -189,79 +189,68 @@
     </section>
 
     <footer class="ftco-footer ftco-section img">
-    	<div class="overlay"></div>
+      <div class="overlay"></div>
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Hakkımızda</h2>
-              <p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Güncel Duyurular</h2>
-              <div class="block-21 mb-4 d-flex">
-                <!--<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>-->
-                <div class="text">
-                  <h3 class="heading"><a href="#">Pizza Margherita + Pizza Marinara 400.0 TL</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> 10 Aralık, 2024</a></div>
-                    <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-                    <!--<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+          <div class="row mb-5">
+              <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                  <div class="ftco-footer-widget mb-4">
+                      <h2 class="ftco-heading-2">Hakkımızda</h2>
+                      <p>Granello İtalyan Restoran, sizi İtalya'nın sıcak atmosferine ve lezzetli mutfağına götürecek bir deneyim sunuyor. Ev yapımı taze makarnalar, odun fırınında pişirilen pizzalar ile her damak tadına hitap eden bir menüye sahip.</p>
+                      <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+                          <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                          <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                          <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                      </ul>
                   </div>
-                </div>
               </div>
-              <div class="block-21 mb-4 d-flex">
-                <!--<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>-->
-                <div class="text">
-                  <h3 class="heading"><a href="#">Pizza Marinara Con Burrata bir alana bir bedava</a></h3>
-                  <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> 15 Kasım, 2024</a></div>
+              <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
+                  <div class="ftco-footer-widget mb-4">
+                      <h2 class="ftco-heading-2">Güncel Duyurular</h2>
+                      <div class="block-21 mb-4 d-flex">
+                          <!--<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>-->
+                          <div class="text">
+                              <h3 class="heading"><a href="blog.html">Pizza Margherita + Pizza Marinara 400.0 TL</a></h3>
+                              <div class="meta">
+                                  <div><a href="#"><span class="icon-calendar"></span> 10 Aralık, 2024</a></div>
+                                  <!--<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
+                                  <!--<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+                              </div>
+                          </div>
+                      </div>
+                      <div class="block-21 mb-4 d-flex">
+                          <!--<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>-->
+                          <div class="text">
+                              <h3 class="heading"><a href="blog.html">Pizza Marinara Con Burrata bir alana bir bedava</a></h3>
+                              <div class="meta">
+                                  <div><a href="#"><span class="icon-calendar"></span> 15 Kasım, 2024</a></div>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                </div>
               </div>
-            </div>
+              <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                  <div class="ftco-footer-widget mb-4">
+                      <h2 class="ftco-heading-2">İletişim</h2>
+                      <div class="block-23 mb-3">
+                          <ul>
+                              <li><span class="icon icon-map-marker"></span><span class="text">Plaj Yolu Sokak No:18 Suadiye ,İstanbul</span></li>
+                              <li><a href="#"><span class="icon icon-phone"></span><span class="text">+90 216 464 17 77 - 78- 79</span></a></li>
+                              <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@granello.com</span></a></li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
           </div>
-          <!--<div class="col-lg-2 col-md-6 mb-5 mb-md-5">
-             <div class="ftco-footer-widget mb-4 ml-md-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Cooked</a></li>
-                <li><a href="#" class="py-2 d-block">Deliver</a></li>
-                <li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-                <li><a href="#" class="py-2 d-block">Mixed</a></li>
-              </ul>
-            </div>
-          </div>-->
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">İletişim</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Plaj Yolu Sokak No:18 Suadiye ,İstanbul</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+90 216 464 17 77 - 78- 79</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@granello.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
+          <div class="row">
+              <div class="col-md-12 text-center">
+                  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>-->
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+              </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>-->
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
-        </div>
       </div>
-    </footer>
+  </footer>
+  
     
   
 
