--- a/blog-single.html
+++ b/blog-single.html
@@ -37,12 +37,13 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Ana Sayfa</a></li>
-	          <li class="nav-item"><a href="menu.html" class="nav-link">Menü</a></li>
-	          <li class="nav-item"><a href="services.html" class="nav-link">Hizmetler</a></li>
-	          <li class="nav-item active"><a href="blog.html" class="nav-link">Duyurular</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Hakkımızda</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Ana Sayfa</a></li>
+					<li class="nav-item"><a href="menu.html" class="nav-link">Menü</a></li>
+					<li class="nav-item"><a href="services.html" class="nav-link">Hizmetler</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Duyurular</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">Hakkımızda</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
+					<li class="nav-item"><a href="ad.html" class="nav-link">Admin</a></li> 
 	        </ul>
 	      </div>
 		  </div>
