--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Duyurular</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">Hakkımızda</a></li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">İletişim</a></li>
+            <li class="nav-item"><a href="ad.html" class="nav-link">Admin</a></li> 
 	        </ul>
 	      </div>
 		  </div>
@@ -94,7 +95,7 @@
             	<div class="row">
             		<div class="col-md-6">
 	                <div class="form-group">
-	                  <input type="text" class="form-control" placeholder="Ad Soyaf">
+	                  <input type="text" class="form-control" placeholder="Ad Soyad">
 	                </div>
                 </div>
                 <div class="col-md-6">
