--- a/services.html
+++ b/services.html
@@ -43,6 +43,7 @@
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Duyurular</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">Hakkımızda</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">İletişim</a></li>
+            <li class="nav-item"><a href="ad.html" class="nav-link">Admin</a></li> 
 	        </ul>
 	      </div>
 		  </div>
